# fun-with-cmake

./: .gitignore  README.md
proj_root/: CMakeLists.txt
proj_root/lib_a/: CMakeLists.txt  ClassA.cpp  ClassA.h
proj_root/lib_b/: CMakeLists.txt  ClassB.cpp  ClassB.h
proj_root/lib_c/: CMakeLists.txt  ClassC.cpp  ClassC.h
proj_root/the_executable/: CMakeLists.txt  main.cpp
